Closed Bug 1472432 Opened 7 years ago Closed 7 years ago

[FIX] nsXULTooltipListener.cpp should not use IsInUncomposedDoc

Categories

(Core :: XUL, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla63
Tracking Status
firefox63 --- fixed

People

(Reporter: smaug, Assigned: smaug)

References

Details

Attachments

(1 file)

No description provided.
Here I think we should just use the document or Shadowroot getElementById. this is XUL only
Assignee: nobody → bugs
Attachment #8989247 - Flags: review?(mrbkap)
Summary: nsXULTooltipListener.cpp should not use IsInUncomposedDoc → [FIX] nsXULTooltipListener.cpp should not use IsInUncomposedDoc
Attachment #8989247 - Flags: review?(mrbkap) → review+
Priority: -- → P3
Pushed by opettay@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/a466ec30b376 Use IsInComposedDoc in nsXULTooltipListener, r=mrbkap
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: