Bug 1472432 - Use IsInComposedDoc in nsXULTooltipListener, r=mrbkap